--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "load-grunt-tasks": "^3.2.0",
     "semver": "^5.0.1",
     "grunt-contrib-uglify": "^0.9.1",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-bump": "^0.3.1",
     "grunt-prompt": "^1.3.0"
   }
