--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
     "type": "git",
     "url": "https://github.com/aleross/angular-segment-analytics"
   },
-  "keywords": ["angular", "segment", "angular analytics", "segmentio"],
+  "keywords": [
+    "angular",
+    "segment",
+    "angular analytics",
+    "segmentio"
+  ],
   "author": "aleross",
   "license": "MIT",
   "homepage": "https://github.com/aleross/angular-segment-analytics",
@@ -14,13 +19,14 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-bump": "^0.3.1",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-jscs": "^2.3.0",
+    "grunt-prompt": "^1.3.0",
     "load-grunt-config": "^0.17.2",
     "load-grunt-tasks": "^3.2.0",
-    "semver": "^5.0.1",
-    "grunt-contrib-uglify": "^0.9.1",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-bump": "^0.3.1",
-    "grunt-prompt": "^1.3.0"
+    "semver": "^5.0.1"
   }
 }
