--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "type": "git",
     "url": "https://github.com/aleross/angular-segment-analytics"
   },
+  "main": "segment.min.js",
+  "bugs": "https://github.com/aleross/angular-segment-analytics/issues",
   "keywords": [
     "angular",
     "segment",
@@ -25,8 +27,13 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-jscs": "^2.3.0",
     "grunt-prompt": "^1.3.0",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.15",
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.1",
     "load-grunt-config": "^0.17.2",
     "load-grunt-tasks": "^3.2.0",
+    "phantomjs": "^1.9.19",
     "semver": "^5.0.1"
   }
 }
