Adding tests, validate config values via methods, fix default config reference

--- a/.jscsrc
+++ b/.jscsrc
@@ -7,5 +7,6 @@
     "disallowSpacesInAnonymousFunctionExpression": null,
     "requireSpacesInFunctionExpression": {
         "beforeOpeningRoundBrace": true
-    }
+    },
+    "disallowMultipleVarDecl": null
 }
