--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-jscs": "^2.3.0",
+    "grunt-karma": "^0.12.1",
     "grunt-prompt": "^1.3.0",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.15",
