--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-jscs": "^2.3.0",
     "grunt-karma": "^0.12.1",
+    "grunt-karma-coveralls": "^2.5.4",
     "grunt-prompt": "^1.3.0",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.15",
+    "karma-coverage": "^0.5.3",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
     "load-grunt-config": "^0.17.2",
