--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "grunt-jscs": "^2.3.0",
     "grunt-karma": "^0.12.1",
     "grunt-karma-coveralls": "^2.5.4",
+    "grunt-npm": "0.0.2",
     "grunt-prompt": "^1.3.0",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.15",
