--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
     "grunt-npm": "0.0.2",
     "grunt-prompt": "^1.3.0",
     "jasmine-core": "^2.3.4",
+    "jit-grunt": "^0.9.1",
     "karma": "^0.13.15",
     "karma-coverage": "^0.5.3",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
     "load-grunt-config": "^0.17.2",
-    "load-grunt-tasks": "^3.2.0",
     "phantomjs": "^1.9.19",
     "semver": "^5.0.1"
   }
