--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "karma": "^0.13.15",
     "karma-coverage": "^0.5.3",
     "karma-jasmine": "^0.3.6",
-    "karma-phantomjs2-launcher": "^0.5.0",
+    "karma-phantomjs-launcher": "^1.0.0",
     "load-grunt-config": "^0.17.2",
-    "phantomjs": "^1.9.19",
+    "phantomjs-prebuilt": "^2.1.4",
     "semver": "^5.0.1"
   }
 }
