Remove requireTrailingComma rule for easier strict DI project support

--- a/.jscsrc
+++ b/.jscsrc
@@ -9,8 +9,5 @@
         "beforeOpeningRoundBrace": true
     },
     "disallowMultipleVarDecl": null,
-    "requireTrailingComma": {
-        "ignoreSingleLine": true,
-        "ignoreSingleValue": true
-    }
+    "requireTrailingComma": false
 }
